# system_programming

./: CMakeLists.txt
solved/sp-hw2/: sp-hw2-sample.c
solved/sp-hw3/: c1.input  c2.input  mymessage.h  sp-hw3-client-sample.c  sp-hw3-server-sample.c
solved/sp-hw4/: TCP_client  TCP_client.c  c1.input  c2.input  c3.input  c4.input  c5.input  sp-hw4-TCP-server-sample.c
sp-hw1/: c1-out.txt  c2-out.txt  sp-hw1-201902763  sp-hw1-201902763.c
sp-hw1/correct/: sp-hw1-sol.c  sp-hw1-sol2.c
sp-hw1/sp-hw1-sol/: sp-hw1-sample.txt  sp-hw1-sol2.c  sp-hw1-text.txt
sp-hw2/: ._sp-hw2-201902763.c  CMakeLists.txt  core  sp-hw2-201902763.c  test
sp-hw3/: sp-hw3-201902763-client  sp-hw3-201902763-client.c  sp-hw3-201902763-server  sp-hw3-201902763-server.c
sp-hw4/: CMakeLists.txt  c  c.c  s  s.c
study/: .viminfo  .vimrc  sp-hw1-sol.c
study/.vim/: .netrwhist
study/.vim/templates/: skeleton.c
study/SysV-IPC/: hello.c  shm-pro  shm-pro.c
study/SysV-IPC/sysV-sem/: shm-consumer.c  shm-producer.c  shm-seminit.c
study/debug/: myProg.c
study/fileio/: a.out  access.c  chmod.c  chown-ex.c  feof-ex  feof-ex.c  filecopy.c  fileio-ex.c  freopen-ex2.c  lineio-ex.c  readlink-ex.c  stdio-ex  stdio-ex.c  symlink-ex.c  termtest
study/final/: out  test  test.c
study/final/09_mmap/: 09_mmap.md
study/final/09_mmap/code/: mmcp  mmcp.c  nonblockw.c
study/final/09_mmap/etc/: err
study/final/10_semaphore/code/: semaphore.c
study/final/11_signal/code/: alarm-getchar.c  alarm-getchar2.c  pause.c  posix-timer.c  sigTest.c  sighandler.c  sigsuspend.c  siguser1.c  sleep-sig.c
study/final/11_signal/run/: abort  at  sigTest  sighandler  sleep-sig
study/final/12_SysV-IPC/code/: crecv.c  csend.c  memlayer.c  mymessage.h  shm-con.c  shm-pro.c
study/final/12_SysV-IPC/run/: crecv  csend  shm-con
study/final/12_SysV-IPC/sysV-sem/: shm-consumer.c  shm-seminit.c
study/final/13_network/code/: echo_client.c  gethostbyname_ex.c  select_client.c  select_server.c
study/final/13_network/run/: select_client
study/final/14_time/code/: setTime.c  timeF.c  timeToStr.c  toUTC.c
study/final/14_time/run/: timeToStr
study/midterm/debug/: loop.c  segfault  segfault.c
study/midterm/fileio/: access-ex.c  chmod-ex.c  create-ex.c  dup-ex.c  fcopy2-ex.c  ferror-ex  ferror-ex.c  filecopy  fileio-ex  frandom  frandom.c  freopen-ex1.c  fstat-ex.c  hlink-ex.c  io-redir.c  lineio-ex  open-ex.c  out  readlink.c  termtest.c
study/midterm/process/: calc.c  echoall  echoall.c  nexec.c  pid-ex  pipe.c  race  race.c  sleep5  sleep5.c  system-ex  system-ex.c  time-ex.c
study/midterm/reclock/: rec-proc.c
study/midterm/thread/: cond-var.c  prod-cons.c  th_cancel.c  th_cancel2.c  th_hello.c  th_hello2.c  thread-join.c
study/mmap/: mmcp  mmcp.c  nonblockw  photo.out
study/network/: echo_client  echo_server  echo_server.c  gethostbyaddr_ex.c  getservbyname_ex.c  select_server
study/process/: calc  fork  fork.c  fwait  fwait.c  nexec  pid-ex.c  pipe  test.c  time-ex  time-ex.c
study/reclock/: reclock  reclock.c
study/semaphore/: mprod-cons.c  prod-cons  prod-cons.c  semaphore
study/signal/: abort.c  alarm-getchar.c  alarm-getchar2.c  alarm.c  itimer.c  pause  pause.c  posix-timer  posix-timer.c  sighandler.c  sigsuspend.c  siguser1.c  sleep-sig.c
study/thread/: cond-var  cond-var.c  dot_product.c  inc_dec_no_mtx  inc_dec_no_mtx.c  inc_dec_with_mtx  mutex_counter.c  th_cancel  thread-ex1.c  thread-ex2.c
study/time/: setTime.c  strFTime  strFTime.c  timeF  timeF.c  timeToStr.c  toUTC  toUTC.c
